WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137362
[iOS] Networking process stops loading web pages while running Alexa test with random URL list
https://bugs.webkit.org/show_bug.cgi?id=137362
Summary
[iOS] Networking process stops loading web pages while running Alexa test wit...
Pratik Solanki
Reported
2014-10-02 15:03:12 PDT
The networking process stops loading pages after some hours of loading random Alexa urls. When this happens we noticed that the process had hit its limit of dispatch queue threads - we had 64 com.apple.WebKit/CFNetwork threads in the Networking process. Networking comes to a stall and no progress is made until the process is killed and restarted. This can happen if ResourceHandleCFURLConnectionDelegateWithOperationQueue code is waiting for a semaphore signal and the web process dies. The cleanup code for ResourceHandleCFURLConnectionDelegateWithOperationQueue does not signal the semaphore and thus the thread just hangs around forever. Eventually, we can accumulate enough threads to hit the queue thread limit.
Attachments
Patch
(4.40 KB, patch)
2014-10-02 15:15 PDT
,
Pratik Solanki
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2014-10-02 15:03:27 PDT
<
rdar://problem/18507382
>
Pratik Solanki
Comment 2
2014-10-02 15:15:51 PDT
Created
attachment 239147
[details]
Patch
Pratik Solanki
Comment 3
2014-10-02 16:39:46 PDT
Committed
r174244
: <
http://trac.webkit.org/changeset/174244
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug